src/test/deca/codegen/valid/created/objet/cast2.deca
// Description :
//      test de verification du cast de classe 
// Resultats :
//      ok

class A {
     int x;

}

class B extends A {
    
}

{

    A a ;
    B b = new B();
    b = (B)(a);
    println("passed");
}