src/test/deca/codegen/invalid/created/objet/cast1.deca
// Description :
//      test de verification du cast de classe 
// Resultats :
//      erreur dexecition; a nest pas une instance de B

class A {
     int x;

}

class B extends A {
    
}

{

    A a = new A();
    B b = new B();
    b = (B)(a);
    println("ne devrait pas etre affiche");
        
}